Update for Playground

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(smart_pointers)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(smart_pointers main.cpp src/Rectangle.cpp src/Rectangle.h src/SharedPointer.cpp src/SharedPointer.h src/UniquePointer.cpp src/UniquePointer.h src/WeakPointer.cpp src/WeakPointer.h)
+add_executable(smart_pointers main.cpp src/Rectangle.cpp src/Rectangle.h src/SharedPointer.cpp src/SharedPointer.h src/UniquePointer.cpp src/UniquePointer.h src/WeakPointer.cpp src/WeakPointer.h src/MakeShared.cpp src/MakeShared.h)
